readme and additional plugin info checks

--- a/res/layout/contextitemview.xml
+++ b/res/layout/contextitemview.xml
@@ -74,7 +74,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:text="@string/description" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
