--- a/res/layout/contextitemview.xml
+++ b/res/layout/contextitemview.xml
@@ -49,7 +49,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/checkBox1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/submitToSSP" />
+        android:text="@string/Expose" />
 
     <TextView
         android:id="@+id/textView4"
